Refactor : 목표 일정 조회 쿼리 개선
- 실제로 사용되는 필드들만 select